build/apps/hello-world/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  name: dev
