build/apps/hello-world/base/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-world-frontend
        task: hello-world-frontend
    spec:
      # restartPolicy: Always

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: hello-world-frontend
      # - name: data
      #   persistentVolumeClaim:
      #     claimName: hello-world-frontend

      containers:
        - name: webserver-simple
          image: kostiscodefresh/simple-web-app:3d9b390 #'docker.io/kostiscodefresh/simple-web-app:3d9b390'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP

          volumeMounts:
            - name: config
              mountPath: /app/data
              readOnly: false
            - name: config
              mountPath: /config-data
              readOnly: false
