build/apps/hello-world/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-frontend
  # labels:
  #   app: hello-world-frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  # selector:
  #   app: traefik
  #   task: hello-world-frontend
  selector:
    app: traefik
    app.kubernetes.io/instance: infra-traefik
    app.kubernetes.io/name: traefik
    task: hello-world-frontend
